# TP2023_Pacman

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Constants.h  Dockerfile  GameCore.cpp  GameCore.hpp  GameMenu.cpp  GameMenu.hpp  Maps.cpp  Maps.hpp  README.md  SinglePlayer.cpp  SinglePlayer.hpp  Tests.cpp  Tests.hpp  run_mac.sh
.github/: release-drafter.yml
.github/workflows/: main.yaml  main.yml  match-label-action.yml  release-draft.yml
GameFolder/: .gitignore  CMakeLists.txt  Constants.h  Game.cpp  GameCore.cpp  GameCore.h  GameCore.hpp  GameMenu.cpp  Maps.cpp  Maps.h  Maps.txt  README.md  SinglePlayer.cpp  SinglePlayer.h  SinglePlayer.hpp  update.sh
game_folder/: CMakeLists.txt  Dockerfile  Game.cpp  GameCore.cpp  GameCore.hpp  README.md  SinglePlayer.cpp  SinglePlayer.hpp  docker-compose.yml  install.sh  install_mac.sh  project_builder.sh  run.sh
